fix: update footer alignment and styling for improved responsiveness

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,7 +17,7 @@ footer {
     position: absolute;
     bottom: 0;
     right: 0;
-    text-align: right;
+    // text-align: right;
     padding-top: 1em;
     width: 100%;
     height: 60px;
